--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#Tokyo {
+    background-color: #03a9f4;
+}
+
+#Paris {
+    background-color: #04534f;
+}
+
+#scotland{
+    border-color: #378e3c
+}
